// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Main Renders without exploding as .gallery 1`] = `
<main
  class="jsx-1868992201 gallery"
/>
`;

exports[`Component: Main Renders without exploding as .index 1`] = `
<main
  class="jsx-1868992201 index"
/>
`;
